# sp_vision

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  README_ws_bridge.md  Untitled-1.sh  autostart.sh  existing_problems.md  makefile  readme.md
.claude/: settings.local.json
H7_new/: AUTO_AIM.md  CHASSIS.md  COMM.md  GIMBAL.md  MISC.md  README.md  SHOOT.md  UI.md  readme.txt
H7_new/DM-balanceV1/: .mxproject  CtrlBoard-H7_IMU.ioc
H7_new/DM-balanceV1/Core/Inc/: main.h  stm32h7xx_it.h  tim.h
H7_new/DM-balanceV1/Core/Src/: freertos.c  gpio.c  main.c  stm32h7xx_it.c  tim.c  usart.c
H7_new/DM-balanceV1/MDK-ARM/: CtrlBoard-H7_IMU.uvguix.Arjen  CtrlBoard-H7_IMU.uvguix.X15  CtrlBoard-H7_IMU.uvguix.X99  CtrlBoard-H7_IMU.uvoptx  CtrlBoard-H7_IMU.uvprojx  startup_stm32h723xx.lst
H7_new/DM-balanceV1/MDK-ARM/CtrlBoard-H7_IMU/: CtrlBoard-H7_IMU.build_log.htm  CtrlBoard-H7_IMU.hex  CtrlBoard-H7_IMU.htm  CtrlBoard-H7_IMU.lnp  CtrlBoard-H7_IMU.map  CtrlBoard-H7_IMU_CtrlBoard-H7_IMU.dep  adc.crf  adc.d  auto_aim.crf  auto_aim.d  balance_chassis.crf  balance_chassis.d  bmi088driver.crf  bmi088driver.d  bmi088middleware.crf  bmi088middleware.d  bsp_buzzer.crf  bsp_buzzer.d  bsp_dwt.crf  bsp_dwt.d  bsp_flash.crf  bsp_flash.d  bsp_pwm.crf  bsp_pwm.d  bsp_rc.crf  bsp_rc.d  bsp_tfmini.crf  bsp_tfmini.d  bsp_tim24.crf  bsp_tim24.d  bsp_usart.crf  bsp_usart.d  bsp_usb.crf  bsp_usb.d  bsp_vofa+.crf  bsp_vofa+.d  calibrate_task.crf  calibrate_task.d  camera_channel.crf  camera_channel.d  (+226 more)
H7_new/DM-balanceV1/USB_DEVICE/App/: usbd_cdc_if.c
H7_new/DM-balanceV1/User/APP/: INS_task.c  auto_aim.c  auto_aim.h  chassis_behaviour.c  chassis_behaviour.h  chassis_power_control.c  chassis_power_control.h  chassis_task.h  gimbal_behaviour.c  gimbal_behaviour.h  gimbal_task.c  gimbal_task.h  message_task.c  observer.c  observer.h  referee_usart_task.h  remote_control.c  remote_control.h  robot_param.h  shoot.c  shoot.h
H7_new/DM-balanceV1/User/Bsp/: bsp_PWM.c  bsp_PWM.h  bsp_tfmini.c  bsp_tfmini.h  bsp_usart.c  bsp_usart.h  bsp_vofa+.c  bsp_vofa+.h  can_bsp.c  can_bsp.h
H7_new/DM-balanceV1/User/ROBOT/: Balance.h  Engineer.h  Hero.h  Infantry_robot.h  Sentinel.h
H7_new/DM-balanceV1/User/chassis/: Balance_chassis.c  Balance_chassis.h  Mecanum_chassis.c
H7_new/DM-balanceV1/User/gimbal/: Multi-axis_robotic_arm.c  Multi-axis_robotic_arm.h  double_yaw_pitch.c  (+3 more)
calibration/: capture.cpp
configs/: sentry.yaml  standard_mpc_dm02.yaml
docker/common/: dockerfile
docker/ros/: Dockerfile
io/: CMakeLists.txt  camera.cpp  command_sender.hpp  control_types.hpp  dm02_board.cpp  dm02_board.hpp  gimbal_types.hpp
io/dm02/: dm02.cpp  dm02.hpp
io/dm02/impl/: dm02_driver.cpp  dm02_driver.hpp  link_impl.cpp  link_impl.hpp  platform_posix.cpp  serial_transport_posix.hpp
io/dm02/types/: control_types.hpp  gimbal_types.hpp
io/dm02_link/: dm02_link.cpp  dm02_link.hpp
io/foxglove/: foxglove.hpp  schema.hpp  server.hpp
io/foxglove/fb/: builder.hpp  camera_calibration.hpp  compressed_image.hpp  fb.hpp  frame_transforms.hpp  image_annotations.hpp  laser_scan.hpp  location_fix.hpp  log.hpp  point_cloud.hpp  raw_image.hpp  scene_update.hpp  time.hpp  types.hpp
io/foxglove/schema/: catalog.hpp  loader.hpp  schema.hpp
io/foxglove/server/: server.hpp
io/hikrobot/include/: MvCameraControl.h
io/ros2/: publish2nav.cpp  publish2nav.hpp  ros2.cpp  ros2.hpp  subscribe2nav.cpp
io/serial/: CMakeLists.txt
io/will_delete/: cboard.hpp
io/will_delete/gimbal/: gimbal.hpp
io/ws/: sp_msg_json.hpp  ws_bridge.cpp  ws_bridge.hpp
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/share/sp_msgs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/share/sp_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  export_sp_msgs__rosidl_generator_cExport.cmake  export_sp_msgs__rosidl_generator_cppExport.cmake  export_sp_msgs__rosidl_generator_pyExport-noconfig.cmake  export_sp_msgs__rosidl_generator_pyExport.cmake  export_sp_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_sp_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  sp_msgsConfig.cmake  sp_msgs__rosidl_typesupport_cExport.cmake  sp_msgs__rosidl_typesupport_cppExport.cmake  sp_msgs__rosidl_typesupport_introspection_cExport.cmake  sp_msgs__rosidl_typesupport_introspection_cppExport.cmake
ros2_ws/install/share/sp_msgs/msg/: AutoaimTargetMsg.idl  AutoaimTargetMsg.json  AutoaimTargetMsg.msg  Dm02SerialCopyMsg.idl  Dm02SerialCopyMsg.json  Dm02SerialCopyMsg.msg  EnemyStatusMsg.idl  EnemyStatusMsg.json
ros2_ws/src/sp_msgs/: CMakeLists.txt
src/: auto_aim_debug_mpc.cpp  auto_buff_debug.cpp  auto_buff_debug_mpc.cpp  mt_auto_aim_debug.cpp  mt_standard.cpp  referee_runtime.hpp  sentry.cpp  sentry_bp.cpp  sentry_debug.cpp  sentry_multithread.cpp  standard.cpp  standard_mpc.cpp  uav.cpp  uav_debug.cpp
systemd/: spv-supervisor.env.example  spv-supervisor.service.template
tasks/auto_aim/: CMakeLists.txt  aimer.hpp  armor.hpp  detector.cpp  tracker.cpp  tracker.hpp  voter.cpp
tasks/auto_aim/multithread/: commandgener.cpp  commandgener.hpp
tasks/auto_aim/yolos/: yolo11.cpp  yolov5.cpp  yolov8.cpp
tasks/auto_buff/: CMakeLists.txt  buff_aimer.hpp
tasks/omniperception/: CMakeLists.txt  decider.cpp  decider.hpp
tests/: auto_aim.cpp  auto_aim_test.cpp  cboard_test.cpp  communication_demo.cpp  detector_video_test.cpp  dm_test.cpp  dm_virtual_sender_test.cpp  dm_ws_bridge_test.cpp  fire_test.cpp  gimbal_response_test.cpp  gimbal_test.cpp  handeye_test.cpp  minimum_vision_system.cpp  planner_test.cpp  ws_bridge_test.cpp
tools/: CMakeLists.txt  foxglove_bridge.hpp  install_spv_supervisor_service.sh  logger.cpp  plotter.cpp  plotter.hpp  run_dm_virtual_ws_demo.sh  spv_supervisor.sh  udp_receive.py  virtual_serial_pair.py  ws_receive.py
tools/foxglove/: download_asio_headers.sh  download_flatbuffers_headers.sh  download_flatc.sh  download_websocketpp_headers.sh  gen_schemas.sh
(+65 files in other folders)
