<?xml version="1.0"?>
<package format="3">
  <name>sp_msgs</name>
  <version>0.0.1</version>
  <description>Custom messages for sp_vision auto-aim and navigation.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>builtin_interfaces</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>